<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/id_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <TextView
            android:id="@+id/description_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textAppearance="?attr/textAppearanceBody1" />

        <TextView
            android:id="@+id/imageUrl_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imageurl"
            android:textAppearance="?attr/textAppearanceBody1" />

        <TextView
            android:id="@+id/author_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:textAppearance="?attr/textAppearanceBody1" />

        <TextView
            android:id="@+id/publicationDate_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publicationDate"
            android:textAppearance="?attr/textAppearanceBody1" />

        <TextView
            android:id="@+id/fullArticleLink_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fullArticleLink"
            android:textAppearance="?attr/textAppearanceBody1" />

        <TextView
            android:id="@+id/keywords_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keywords"
            android:textAppearance="?attr/textAppearanceBody1" />


    </LinearLayout>

</ScrollView>
